# light_surrealdb

./: .gitignore  Cargo.toml  README.md
src/: main.rs  other.rs
surrealdb_client/: Cargo.toml
surrealdb_client/src/: interaction.rs  lib.rs  socket.rs  unimplemented(async).rs  verbs.rs
