[package]
name = "light_surrealdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# tokio = {version = "1.21.1", features = ["full"] }
serde = {version = "1.0.144", features = ["derive"]}
surrealdb_client = {path = "surrealdb_client"}
# ws = "0.9.2"