[package]
name = "surrealdb_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# reqwest = { version = "0.11.11", features = ["json"]}
# tokio = {version = "1.21.1", features = ["full"] }
uuid = {version = "1.1.2", features = ["v4"]}
ws = "0.9.2"
serde = {version = "1.0.144", features = ["derive"]}
serde_json = "1.0.85"